z-index fixes for main-control

--- a/client/assets/styles/scss/components/main-controls.scss
+++ b/client/assets/styles/scss/components/main-controls.scss
@@ -7,6 +7,7 @@
   padding: 0 15px;
   position: relative;
   width: calc(100% - 270px);
+  z-index: 3;
 
   > .btn-group,
   > button,
@@ -99,7 +100,7 @@
   transition: all .15s ease-in;
 
   &.out {
-    z-index: 1;
+    z-index: 3;
   }
 
   &.slide-instance.out {
