--- a/client/assets/styles/scss/components/stream.scss
+++ b/client/assets/styles/scss/components/stream.scss
@@ -16,7 +16,7 @@
     position: relative;
     text-align: center;
     transition: color .2s;
-    z-index: 2;
+    z-index: 4;
 
     &.build-header {
       text-indent: -30px;
